objects/ssot__SurveySubject__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__CreatedDate__c</fullName>
        <label>Created Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Survey Subject Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LastModifiedDate__c</fullName>
        <label>Last Modified Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SurveyId__c</fullName>
        <label>Survey</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SurveyParentId__c</fullName>
        <label>Survey Parent</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SurveyParentObject__c</fullName>
        <label>Survey Parent Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SurveySubjectId__c</fullName>
        <label>Survey Subject</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SurveySubjectObject__c</fullName>
        <label>Survey Subject Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SurveySubject_SurveyId_map_Survey_Id_N_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SurveySubject_SurveyId_map_Survey_Id_N_1</label>
        <referenceTo>ssot__Survey__dlm</referenceTo>
        <relationshipLabel>SurveySubject_SurveyId_map_Survey_Id_N_1</relationshipLabel>
        <relationshipName>SurveySubject_SurveyId_map_Survey_Id_N_1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761228490_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SurveySubject_SurveyParentId_map_Sur_rel</label>
        <referenceTo>ssot__SurveyInvitation__dlm</referenceTo>
        <relationshipLabel>SurveySubject_SurveyParentId_map_Sur_rel</relationshipLabel>
        <relationshipName>rel_1697761228490_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761229795_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SurveySubject_SurveySubjectId_map_Ac_rel</label>
        <referenceTo>ssot__AccountContact__dlm</referenceTo>
        <relationshipLabel>SurveySubject_SurveySubjectId_map_Ac_rel</relationshipLabel>
        <relationshipName>rel_1697761229795_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>